Fix file structure

--- a/Bio/Bio.html
+++ b/Bio/Bio.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<title>Student Bio</title>
-		<link rel="stylesheet" type="text/css" href="/assets/stylesheets/bio.css" />
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/bio.css" />
 	</head>
 
 	<body>
